# cor-engine

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  LICENSE  README.md
libraries/: external_code_import_local_conf.h
libraries/cor_algorithm/proj.cmake/: CMakeLists.txt
libraries/cor_algorithm/proj.common/: file_list.mk
libraries/cor_algorithm/proj.gcc/: Makefile
libraries/cor_algorithm/sources/: bit_operation.cpp  bit_operation.h  bit_operation_tmpl.h  bit_operation_tmpl_impl.h  utilities.cpp  utilities.h  utilities_tmpl.h  utilities_tmpl_impl.h
libraries/cor_all_cocos2dx/proj.cmake/: CMakeLists.txt  build_ios.rb
libraries/cor_all_cocos2dx/proj.cmake/call_command/: ReadMe.txt  call_command.cpp  call_command.vcxproj  call_command.vcxproj.filters
libraries/cor_all_cpp/proj.cmake/: CMakeLists.txt
libraries/cor_all_mruby/proj.cmake/: CMakeLists.txt  build_common.rb  build_default.rb  build_win32.rb
libraries/cor_all_mruby/proj.cmake/build_win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cor_system.sln  cor_system.vcxproj  cor_system.vcxproj.filters
libraries/cor_cocos2dx_converter/proj.common/: file_list.mk
libraries/cor_cocos2dx_converter/proj.gcc/: Makefile
libraries/cor_cocos2dx_converter/sources/: cocos2dx_experimental.cpp  cocos2dx_experimental.h  collision_2d_node.cpp  collision_2d_node.h  easy_http_client.cpp  easy_http_client.h  step_size_scene.cpp  step_size_scene.h  textured_triangle_node.cpp  textured_triangle_node.h  type_converter.cpp  type_converter.h  type_converter_tmpl.h  type_converter_tmpl_impl.h
libraries/cor_cocos2dx_mruby_interface/proj.common/: file_list.mk
libraries/cor_cocos2dx_mruby_interface/proj.gcc/: Makefile
libraries/cor_cocos2dx_mruby_interface/sources/: cocos2dx_bind.h  cocos2dx_experimental.cpp  cocos2dx_experimental.h  cocos_array.cpp  cocos_array.h  cocos_mruby_ref.cpp  cocos_mruby_ref.h  cocos_value.cpp  cocos_value.h  cocos_weak_ptr.cpp  cocos_weak_ptr.h  mruby_script_engine.cpp  mruby_script_engine.h  sprite_experimental.cpp  sprite_experimental.h
libraries/cor_cpp_dll/proj.cmake/: CMakeLists.txt
libraries/cor_cpp_dll/sources/: cor_cpp_dll_main.cpp  cor_cpp_dll_main.h
libraries/cor_data_structure/proj.cmake/: CMakeLists.txt
libraries/cor_data_structure/proj.common/: file_list.mk
libraries/cor_data_structure/proj.gcc/: Makefile
libraries/cor_data_structure/sources/: array_pool.cpp  array_pool.h  array_pool_tmpl.h  array_pool_tmpl_impl.h  tree_pool.cpp  tree_pool.h  tree_pool_tmpl.h  tree_pool_tmpl_impl.h
libraries/cor_mruby_dll/proj.cmake/: make.rb
libraries/cor_mruby_dll/sources/: cor_mruby_console_app_main.cpp
libraries/cor_mruby_interface/proj.cmake/: CMakeLists.txt
libraries/cor_mruby_interface/proj.common/: file_list.mk
libraries/cor_mruby_interface/proj.gcc/: Makefile
libraries/cor_mruby_interface/sources/: basic_bind.cpp  basic_bind.h  mruby_array.cpp  mruby_array.h  mruby_array_tmpl.h  mruby_array_tmpl_impl.h  mruby_experimental.cpp  mruby_experimental.h  mruby_ref_container.cpp  mruby_ref_container.h  mruby_state.cpp  mruby_state.h  mrubybind.cpp
libraries/cor_project_structure/proj.cmake/: CMakeLists.txt
libraries/cor_project_structure/proj.common/: file_list.mk
libraries/cor_project_structure/proj.gcc/: Makefile
libraries/cor_project_structure/sources/: application.cpp  application.h  project_base.cpp  project_base.h  project_group.cpp  project_group.h  project_group_scene.cpp  project_group_scene.h  project_mruby_call.cpp  project_mruby_call.h
libraries/cor_system/proj.common/: file_list.mk
libraries/cor_system/proj.gcc/: Makefile
libraries/cor_system/sources/: allocation_monitor.cpp  allocation_monitor.h  cor_crypt.cpp  cor_crypt.h  cor_time.cpp  cor_time.h  job_queue.cpp  job_queue.h  logger.cpp  logger.h  parallel_processor.cpp  parallel_processor.h  thread_pool.cpp  thread_pool.h  utility_for_test.cpp  utility_for_test.h
libraries/cor_type/proj.cmake/: CMakeLists.txt
libraries/cor_type/proj.common/: file_list.mk
libraries/cor_type/proj.gcc/: Makefile
libraries/cor_type/sources/: basic_types.h  cor_type.cpp  cor_type.h
libraries/cor_world/proj.common/: file_list.mk
libraries/scripts/: create_source.rb  filelist.rb  generate_mruby_interface.rb  inc_path.rb  make_all_clean_gcc.rb  make_all_gcc.rb  mruby_interface_gen.rb  package_gen.rb  profiling_result.txt
projects/cor_console_app/: CMakeLists.txt
projects/cor_console_app/proj.cmake/: CMakeLists.txt  build_common.rb  build_osx.rb  build_win32.rb  build_win64.rb
projects/cor_console_app/sources/: cor_console_app_main.cpp
projects/cor_cs_console_app/: .gitignore
projects/deploy_script/: build_android.rb  build_android.sh  build_win.bat  deploy_android.rb  deploy_list_win.rb  deploy_win.rb  list_conf.rb  obj_dump.rb  package_android.sh  profile_android.rb  run_android.rb  run_android.sh  run_profile_android.rb
projects/font_atlas/: gen.rb  gen_tempesta.rb  out-export.fnt  out-export2x.fnt  vagrant_gen.rb
projects/image_tool/: compose.rb  decompose.rb  reduce_color.rb
projects/project_script/: copy_project.rb  project_source_path_local_conf_template.rb
projects/small_experimental/: conf.rb  make.rb
scripts/auto_release/: release.rb  release_android.rb
scripts/git/: merge_to_devel.rb  merge_to_master.rb  release_devel_to_master.rb  release_from_master.rb
scripts/init_work/: pull_and_start_day_work.rb  start_day_work.rb  update_all.rb  update_all.sh
scripts/utility/: rec_copy.rb
tests/basic/: Makefile  alloc_monitor.cpp  basic_main.cpp  basic_test  bit_operation_test.cpp  each_test.cpp  job_queue_test.cpp
tests/data_structure/: Makefile  array_pool.cpp  tree_pool.cpp
tests/math/: Makefile  box_test.cpp  math_main.cpp  math_test  matrix_test.cpp  o_box_contact_test.cpp  o_box_test.cpp  o_sphere_test.cpp  vector_test.cpp
tests/script/: notify.rb  run.rb
tests/thread/: Makefile  thread_main.cpp  thread_pool.cpp
tests/unit/proj.cmake/: CMakeLists.txt  make.rb  test.rb
(+652 files in other folders)
